website/versioned_docs/version-0.11.1/configuration.mdx
---
id: configuration
sidebar_label: Configuration
---


``` kotlin
plugins {
  id("com.rickbusarow.module-check") version "0.11.0"
}

moduleCheck {

  autoCorrect = true // default is true
  deleteUnused = true // default is false

  checks {
    overshotDependency = true  // default is true
    redundantDependency = false  // default is false
    unusedDependency = true  // default is true
    mustBeApi = true  // default is true
    inheritedImplementation = true  // default is true
    sortDependencies = false  // default is false
    sortPlugins = false  // default is false
    unusedKapt = true  // default is true
    anvilFactoryGeneration = true  // default is true
    disableAndroidResources = false  // default is false
    disableViewBinding = false  // default is false
  }

  // allow these modules to be declared as dependency anywhere,
  // regardless of whether they're used
  alwaysIgnore.set(setOf(":test:core-jvm", ":test:core-android"))

  // do not check the dependencies of these modules.
  // in this case, :app could declare any module it wants without issue
  ignoreAll.set(setOf(":app"))

  additionalKaptMatchers.set(
    listOf(
      modulecheck.api.KaptMatcher(
        name = "MyProcessor",
        processor = "my-project.codegen:processor",
        annotationImports = listOf(
          "myproject\\.\\*",
          "myproject\\.MyInject",
          "myproject\\.MyInject\\.Factory",
          "myproject\\.MyInjectParam",
          "myproject\\.MyInjectModule"
        )
      )
    )
  )
}
```
